# PR-review-ai-tool

./: .gitignore  README.md  docker-compose.watcher.yml  docker-compose.yml  pyproject.toml  watcher.Dockerfile
.forgejo/workflows/: ci-triage.yml
.github/workflows/: ci-triage.yml
ops/systemd/: ci-triage-runner.service
runner/: .env.example  Dockerfile  config.yml  entrypoint.sh
runner-github/: .env.example  Dockerfile  configure.sh  dind-entrypoint.sh  entrypoint.sh
scripts/: test_failure_example.py  validate_e2e.sh
src/ci_triage_agent/: __init__.py  __main__.py  ci_client.py  cli.py  config.py  llm_client.py  log_extractor.py  prompt_builder.py  response_parser.py  watcher.py
src/ci_triage_agent/ci/: __init__.py  platform.py
src/ci_triage_agent/cli/: __init__.py  orchestrator.py  parser.py  watcher_entry.py
src/ci_triage_agent/config/: settings.py
src/ci_triage_agent/llm/: client.py
src/ci_triage_agent/models/: __init__.py  diagnosis.py
src/ci_triage_agent/monitoring/: __init__.py  docker_watcher.py
src/ci_triage_agent/pipeline/: __init__.py  diagnosis_parser.py  diagnosis_prompt.py  log_context.py
tests/: test_ci_client.py  test_llm_client.py  test_log_extractor.py  test_prompt_builder.py  test_response_parser.py
tests/fixtures/: sample_error_log.txt  sample_llm_response.md  sample_llm_response_unable.md
