[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-triage-agent"
version = "0.1.0"
description = "AI-Driven CI Failure & Bug Triage Agent"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[project.scripts]
ci-triage-agent = "ci_triage_agent.__main__:main"
ci-triage-watcher = "ci_triage_agent.cli.watcher_entry:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
